# kodland

./: Procfile  Procfile.txt  README.md  db.sqlite3  pyproject.toml  requirements.txt
Blog/: forms.py  models.py  urls.py  views.py
Blog/migrations/: 0001_initial.py
kodland/: settings.py  urls.py
static/css/: font-awesome.css
templates/: base.html  blog.html  blog_create.html  blog_details.html
